--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Poke Poke</title>
   <link rel="icon" href="/favicon.ico" />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="src/styles/App.css" />
+
   
 
 </head>
